# fourier-parallelization

./: .gitignore  AlexNet.cpp  AlexNet.h  CMakeLists.txt  Filter.cpp  Filter.h  Image.cpp  Image.h  README.md  fft.cpp  fft.h  fftparallel.h  filters.h  main.cpp
benchmark/: benchmark.hpp  plots.py
functional/: fft.cpp  fft.h  fft.hpp  fft.metal  fftparallel.cpp  fftparallel.h  fftparallel.hpp  tools.cpp  tools.h  tools.hpp  types.hpp
metal-library/: library.air  library.metal  library.metallib
metals/: MetalFFT.cpp  MetalFFT.hpp
public/results/data/: conv_1.csv  conv_2.csv  conv_3.csv  conv_4.csv  fft2d_1.csv  fft_1.csv
src/: ShaderExecutor.cpp  ShaderExecutor.hpp  fft.cpp  fft.hpp  tools.cpp  tools.hpp  types.hpp
